[package]
name = "idalloc"
version = "0.1.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/idalloc"
homepage = "https://github.com/udoprog/idalloc"
documentation = "https://docs.rs/idalloc"
description = """
A library for different methods of allocating unique identifiers efficiently.
"""
keywords = ["containers"]
categories = ["algorithms"]